force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/Custom_Experience_Cloud_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used by the installed 
    package called Configurable Self Registration &amp; Login For Experience Cloud to configure component behaviour, including logging. Login uses the Login Settings record and Self Registration uses the Self Registration Settings record. Form fields are configured separately in Custom Login Configuration Fields and Custom Registration Configuration Fields.</description>
    <label>Custom Experience Cloud Setting</label>
    <pluralLabel>Custom Experience Cloud Settings</pluralLabel>
</CustomObject>