force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Access_Level_Mode__c.field-meta.xml
<CustomField>
    <fullName>Access_Level_Mode__c</fullName>
    <description>Self Registration only. Controls the access level used to run the Custom Query. System ignores field level security and object settings. User enforces them for the Guest User.</description>
    <inlineHelpText>Self Registration only. System ignores FLS and sharing. User enforces them for the Guest User.</inlineHelpText>
    <label>Access Level Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System</fullName>
                <default>true</default>
                <label>System</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>