force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Self Registration only. If creating a Contact, set the Account Id that the Contact will be related to. If using Person Accounts, leave this field blank.</description>
    <inlineHelpText>Self Registration only. 15 or 18 character Account Id starting with 001. Leave blank for Person Accounts.</inlineHelpText>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>