force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Block_User_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Block_User_Error_Message__c</fullName>
    <defaultValue>&quot;Your account has been temporarily disabled. Please contact us for assistance.&quot;</defaultValue>
    <description>Login only. Error message shown if the user has been temporarily blocked (frozen) by the Salesforce Administrator.</description>
    <inlineHelpText>Login only. Shown if the user account has been frozen.</inlineHelpText>
    <label>Block User Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>