force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Button_Awaiting_Code_Message__c.field-meta.xml
<CustomField>
    <fullName>Button_Awaiting_Code_Message__c</fullName>
    <defaultValue>&quot;Submit Verification Code&quot;</defaultValue>
    <description>Button label shown when the component is awaiting a verification code input from the user.</description>
    <inlineHelpText>Button label shown when the component is awaiting a verification code from the user.</inlineHelpText>
    <label>Button Awaiting Code Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>