force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Button_Label__c</fullName>
    <description>Text used on the submit button. Shown as Login on the Login component and Sign Up on the Self Registration component by default.</description>
    <inlineHelpText>Text used on the submit button.</inlineHelpText>
    <label>Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>