force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Button_Waiting_Message__c.field-meta.xml
<CustomField>
    <fullName>Button_Waiting_Message__c</fullName>
    <description>Text used on the submit button after it has been clicked and the request is being processed.</description>
    <inlineHelpText>Text used on the submit button after it has been clicked.</inlineHelpText>
    <label>Button Waiting Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>