force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Create_Not_Found__c.field-meta.xml
<CustomField>
    <fullName>Create_Not_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Self Registration only. Create a record of the type set in Object Create Type if the Custom Query does not find a matching record.</description>
    <inlineHelpText>Self Registration only. Create a record if one is not found by the Custom Query.</inlineHelpText>
    <label>Create Record If Not Found</label>
    <type>Checkbox</type>
</CustomField>