force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Custom_Query__c.field-meta.xml
<CustomField>
    <fullName>Custom_Query__c</fullName>
    <description>Self Registration only. Write a SOQL query to find a singular Contact, Account or Case record during registration. See docs for more information on using form values as bind variables. NOTE: You must include the AccountId field when querying Contacts.</description>
    <inlineHelpText>Self Registration only. SOQL query used to find a single Contact, Account or Case during registration.</inlineHelpText>
    <label>Custom Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>