force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Enable__c.field-meta.xml
<CustomField>
    <fullName>Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables logging to the Experience Cloud Log object for this record. Login Settings controls login activity and Self Registration Settings controls self registration activity. On by default.</description>
    <inlineHelpText>Turn on to log login or self registration activity to the Experience Cloud Log object.</inlineHelpText>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>