force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Enable_Passwordless_Login__c.field-meta.xml
<CustomField>
    <fullName>Enable_Passwordless_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow the user to login or register with a previously verified email address or phone number. NOTE: Requires other configuration for this to work, see the documentation for full setup instructions.</description>
    <inlineHelpText>Allow the user to login or register with a verified email address or phone number.</inlineHelpText>
    <label>Enable Passwordless Login</label>
    <type>Checkbox</type>
</CustomField>