force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Error_On_Create__c.field-meta.xml
<CustomField>
    <fullName>Error_On_Create__c</fullName>
    <defaultValue>&quot;There was a problem registering your details. Please contact us for assistance.&quot;</defaultValue>
    <description>Self Registration only. Error message shown to the user if a failure occurs creating a new record during registration.</description>
    <inlineHelpText>Self Registration only. Shown if a Contact or Person Account cannot be created.</inlineHelpText>
    <label>Error On Create</label>
    <length>255</length>
    <type>Text</type>
</CustomField>