force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Failed_Code_Verification_Message__c.field-meta.xml
<CustomField>
    <fullName>Failed_Code_Verification_Message__c</fullName>
    <description>Error message shown if there is a problem verifying the verification code entered by the user.</description>
    <inlineHelpText>Shown if the verification code entered by the user cannot be verified.</inlineHelpText>
    <label>Failed Code Verification Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>