force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Incorrect_User_Credentials_Error__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_User_Credentials_Error__c</fullName>
    <defaultValue>&quot;The username or password you entered was not recognised. Please check and try again.&quot;</defaultValue>
    <description>Login only. Error message shown if the user has provided incorrect login details.</description>
    <inlineHelpText>Login only. Shown if the username or password is not recognised.</inlineHelpText>
    <label>Incorrect User Credentials Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>