force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Multiple_Records_Found_Error__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Records_Found_Error__c</fullName>
    <defaultValue>&quot;There was a problem locating your details, please check them and try again or contact us for further assistance.&quot;</defaultValue>
    <description>Self Registration only. Error message shown to the user if the Custom Query finds more than one result.</description>
    <inlineHelpText>Self Registration only. Shown if the Custom Query returns more than one result.</inlineHelpText>
    <label>Multiple Records Found Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>