force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Object_Create_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Create_Type__c</fullName>
    <description>Self Registration only. The type of record created during registration when Create Record If Not Found is enabled. Leave blank if records are never created.</description>
    <inlineHelpText>Self Registration only. Required when Create Record If Not Found is enabled.</inlineHelpText>
    <label>Object Create Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Person Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>