force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Password_Match_Error__c.field-meta.xml
<CustomField>
    <fullName>Password_Match_Error__c</fullName>
    <defaultValue>&quot;Passwords do not match&quot;</defaultValue>
    <description>Self Registration only. Error message shown if the Password and Confirm Password values do not match.</description>
    <inlineHelpText>Self Registration only. Shown if the two password fields do not match.</inlineHelpText>
    <label>Password Match Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>