force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Passwordless_Method__c.field-meta.xml
<CustomField>
    <fullName>Passwordless_Method__c</fullName>
    <description>The method used to send a verification code to the user during Passwordless Login or Self Registration. SMS requires the Identity Verification Credits licence.</description>
    <inlineHelpText>Email or SMS. SMS requires the Identity Verification Credits licence.</inlineHelpText>
    <label>Passwordless Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>