force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Passwordless_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Passwordless_Profile_Id__c</fullName>
    <description>Self Registration only. The name of the Profile assigned to users created via Passwordless Self Registration. The Profile must be a member of the site otherwise user creation fails.</description>
    <inlineHelpText>Self Registration only. Profile name (not Id) used for Passwordless registrations. Must be a site member.</inlineHelpText>
    <label>Passwordless Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>