force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Person_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Record_Type__c</fullName>
    <description>Self Registration only. The Record Type Developer Name of the Person Account Record Type used when a Person Account is created during registration. The Record Type Label is also accepted, but the Developer Name is preferred because labels can be renamed and translated.</description>
    <inlineHelpText>Self Registration only. Record Type Developer Name (not Id) used when creating a Person Account. The label is also accepted.</inlineHelpText>
    <label>Person Account Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>