force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Portal_Error_Send_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Portal_Error_Send_Verification_Code__c</fullName>
    <defaultValue>&quot;There was a problem sending a verification code. Please try again later or contact us for further assistance.&quot;</defaultValue>
    <description>Error message shown if there is a problem sending a verification code to the user based on the method chosen.</description>
    <inlineHelpText>Shown if a verification code cannot be sent to the user.</inlineHelpText>
    <label>Portal Error Send Verification Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>