force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Portal_Login_Error__c.field-meta.xml
<CustomField>
    <fullName>Portal_Login_Error__c</fullName>
    <defaultValue>&quot;There was a problem logging you into the portal. Please contact us for further assistance.&quot;</defaultValue>
    <description>Self Registration only. Error message shown to the user if a failure occurs logging into the portal after registration.</description>
    <inlineHelpText>Self Registration only. Shown if the user cannot be logged in after registering.</inlineHelpText>
    <label>Portal Login Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>