force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Portal_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Portal_Redirect__c</fullName>
    <defaultValue>&quot;/&quot;</defaultValue>
    <description>Set the URL that the user will be redirected to once they successfully login or register.</description>
    <inlineHelpText>Relative URL the user is redirected to after a successful login or registration.</inlineHelpText>
    <label>Portal Redirect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>