force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Portal_Registration_Error__c.field-meta.xml
<CustomField>
    <fullName>Portal_Registration_Error__c</fullName>
    <defaultValue>&quot;There was a problem during registration. Please contact us for further assistance.&quot;</defaultValue>
    <description>Self Registration only. Error message shown to the user if a failure occurs during registration when creating a new user.</description>
    <inlineHelpText>Self Registration only. Shown if the external user cannot be created.</inlineHelpText>
    <label>Portal Registration Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>