force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Portal_Registration_User_Exists__c.field-meta.xml
<CustomField>
    <fullName>Portal_Registration_User_Exists__c</fullName>
    <defaultValue>&quot;User is already registered. Please login to continue.&quot;</defaultValue>
    <description>Self Registration only. Error message shown to the user if the matched Contact or Person Account is already a portal user.</description>
    <inlineHelpText>Self Registration only. Shown if the matched record is already a portal user.</inlineHelpText>
    <label>Portal Registration User Exists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>