force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Send_Email_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Self Registration only. Send an email confirmation on successful registration of a user. Consider switching off if using another solution for sending email communications such as Marketing Cloud, or if Welcome Emails are switched on for your site.</description>
    <inlineHelpText>Self Registration only. Send an email confirmation when a user successfully registers.</inlineHelpText>
    <label>Send Email Confirmation</label>
    <type>Checkbox</type>
</CustomField>