force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Identifies which component this record is for. Login Logging should be Login. Self Registration Logging should be Self Registration. Apex loads records by Type and DeveloperName together.</description>
    <inlineHelpText>Login Logging should be Login. Self Registration Logging should be Self Registration.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
                <default>true</default>
                <label>Login</label>
            </value>
            <value>
                <fullName>Self Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>