force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/User_Locked_Out_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Locked_Out_Error_Message__c</fullName>
    <defaultValue>&quot;Your account has been temporarily locked. Please try again later.&quot;</defaultValue>
    <description>Login only. Error message shown if the user has entered their credentials incorrectly too many times in quick succession and they are temporarily locked out.</description>
    <inlineHelpText>Login only. Shown if the user is temporarily locked out after too many failed attempts.</inlineHelpText>
    <label>User Locked Out Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>