force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/fields/Username_Taken_Message__c.field-meta.xml
<CustomField>
    <fullName>Username_Taken_Message__c</fullName>
    <defaultValue>&quot;The specified username is already taken. Please choose a unique username.&quot;</defaultValue>
    <description>Self Registration only. Error message shown if the chosen username is already taken on this site.</description>
    <inlineHelpText>Self Registration only. Shown if the chosen username is already taken.</inlineHelpText>
    <label>Username Taken Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>