force-app/main/default/objects/Custom_Experience_Cloud_Setting__mdt/listViews/Custom.listView-meta.xml
<ListView>
    <fullName>Custom</fullName>
    <columns>MasterLabel</columns>
    <columns>Type__c</columns>
    <columns>Enable__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom</label>
</ListView>